--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       data-w-id="af0bdc02-deba-dae5-a938-2ea7d3e93d0d" role="banner" data-duration="400" data-doc-height="1">
       <div class="container">
         <div class="navbar-wrapper">
-          <div class="navbar-side"><a href="#" class="navbar-brand w-nav-brand"><img src="/assets/sc-logo-03.png"
-                loading="lazy" width="290" sizes="(max-width: 479px) 96vw, 290px" alt=""
+          <div class="navbar-side"><a href="index.html" class="navbar-brand w-nav-brand"><img
+                src="/assets/sc-logo-03.png" loading="lazy" width="290" sizes="(max-width: 479px) 96vw, 290px" alt=""
                 srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.png 3894w" /></a>
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
@@ -256,7 +256,7 @@
       </div>
     </section>
     <!-- Offers and Events Section -->
-    <section id="events" class="section event">
+    <!-- <section id="events" class="section event">
       <div class="container w-container">
         <div class="section-wrapper">
           <div class="title-block margin-bottom-60px">
@@ -442,7 +442,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Offers and Events Section Ends-->
     <!-- Testimonial Section -->
     <div id="testimonials" class="section">
@@ -737,7 +737,7 @@
     </div>
     <!-- Testimonial Section Ends -->
     <!-- Blog Section -->
-    <section id="blog" class="section">
+    <!-- <section id="blog" class="section">
       <div class="container w-container">
         <div class="section-wrapper">
           <div class="title-block flex-horizontal evenly align-bottom margin-bottom-60px">
@@ -802,7 +802,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Blog Section Ends -->
     <section id="contact" class="section cta">
       <div class="container full w-container">
