services changes and autoplay

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
               class="button button-pink w-button">See menu</a>
           </div>
         </div>
+        <!-- Below the style tag can be removed to get autoplay on safari -->
         <div id="w-node-_17a3ffb9-d2aa-c6bf-5ad0-e4adb40ce44f-dc178eda" class="hero-video-block">
           <div data-poster-url="assets/hair_washing_poster.jpg"
             data-video-urls="assets/hair_washing.mp4,assets/hair_washing.webm" data-autoplay="true" data-loop="true"
             data-wf-ignore="true" class="video w-background-video w-background-video-atom"><video
-              id="4289ad76-e05e-4382-e9bb-dcde130c8d51-video" autoplay="" loop=""
-              style="background-image:url(assets/hair_washing_poster.jpg)" muted="" playsinline="" data-wf-ignore="true"
-              data-object-fit="cover">
+              id="4289ad76-e05e-4382-e9bb-dcde130c8d51-video" autoplay="" loop="" muted="" playsinline=""
+              data-wf-ignore="true" data-object-fit="cover">
               <source src="assets/hair_washing.mp4" type="video/mp4" />
               <source src="assets/hair_washing.webm" type="video/webm" />
             </video></div>
