--- a/services.html
+++ b/services.html
@@ -541,8 +541,6 @@
                                                 <div class="price-2 price-3 price-362">2700</div>
                                             </div>
                                         </div>
-                                        <p class="paragraph-2 menu-line-notes">* ADDONS: Deep Conditioning 300, Scalp
-                                            Scrub 200, Sulphate free shampoo 200</p>
                                     </div>
                                     <div class="menu-section">
                                         <h2 class="menu-section-title">brazilian wax</h2>
@@ -590,8 +588,6 @@
                                                 <div class="price-2">40 each</div>
                                             </div>
                                         </div>
-                                        <p class="paragraph-2 menu-line-notes">* Advanced Haircuts will be charged extra
-                                        </p>
                                     </div>
                                     <div class="menu-section">
                                         <h2 class="menu-section-title">body polishing</h2>
@@ -1159,7 +1155,7 @@
                                         <h2 class="menu-section-title">hair styling</h2>
                                         <div class="menu-item-wrap">
                                             <div class="menu-line-item-wrap">
-                                                <h3 class="menu-item-2">Normal Saree Draping</h3>
+                                                <h3 class="menu-item-2">Bridal Hairstyles</h3>
                                                 <div class="menu-line"></div>
                                                 <div class="price-2">5000</div>
                                             </div>
