--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
           <div data-poster-url="assets/hair_washing_poster.jpg"
             data-video-urls="assets/hair_washing.mp4,assets/hair_washing.webm" data-autoplay="true" data-loop="true"
             data-wf-ignore="true" class="video w-background-video w-background-video-atom"><video
-              id="4289ad76-e05e-4382-e9bb-dcde130c8d51-video" autoplay="" loop="" muted="" playsinline=""
-              data-wf-ignore="true" data-object-fit="cover">
+              id="4289ad76-e05e-4382-e9bb-dcde130c8d51-video" autoplay="" loop=""
+              style="background-image:url(assets/hair_washing_poster.jpg)" muted="" playsinline="" data-wf-ignore="true"
+              data-object-fit="cover">
               <source src="assets/hair_washing.mp4" type="video/mp4" />
               <source src="assets/hair_washing.webm" type="video/webm" />
             </video></div>
