Footer links updated

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -186,8 +186,8 @@
                 <div class="footer-divider-two"></div>
                 <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc046" style="opacity:0" class="footer-bottom">
                     <div class="footer-copyright">© 2025 Sugarcoat salon. All rights reserved</div>
-                    <div class="footer-legal-block"><a href="#" class="legal-link">Terms of Use</a><a href="#"
-                            class="legal-link">Privacy Policy</a></div>
+                    <div class="footer-legal-block"><a href="/terms-conditions.html" class="legal-link">Terms &amp;
+                            Conditions</a><a href="/privacy-policy.html" class="legal-link">Privacy Policy</a></div>
                 </div>
             </div>
         </section>
