SEO changes done

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html data-wf-page="6880c2bda24ced1fe9cc7957" data-wf-site="687bd395d7f42e25dc178e93" data-wf-status="1">
+<html data-wf-page="6880c2bda24ced1fe9cc7957" data-wf-site="687bd395d7f42e25dc178e93" data-wf-status="1" lang="en-IN">
 
 <head>
     <meta charset="utf-8" />
-    <title>Sugarcoat Salon Terms and Conditions</title>
-    <meta content="Terms and Conditions" name="description" />
-    <meta content="Sugarcoat Salon Terms and Conditions" property="og:title" />
-    <meta content="Terms and Conditions" property="og:description" />
-    <meta content="Sugarcoat Salon Terms and Conditions" property="twitter:title" />
-    <meta content="Terms and Conditions" property="twitter:description" />
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/terms-and-conditions.html">
+    <title>Terms and Conditions | Sugarcoat Salon Bangalore</title>
+    <meta
+        content="Read the terms and conditions of Sugarcoat Salon in Bangalore regarding appointments, payments, cancellations, and salon services."
+        name="description" />
+    <meta content="Terms and Conditions | Sugarcoat Salon Bangalore" property="og:title" />
+    <meta
+        content="Read the terms and conditions of Sugarcoat Salon in Bangalore regarding appointments, payments, cancellations, and salon services."
+        property="og:description" />
+    <meta content="Terms and Conditions | Sugarcoat Salon Bangalore" property="twitter:title" />
+    <meta
+        content="Read the terms and conditions of Sugarcoat Salon in Bangalore regarding appointments, payments, cancellations, and salon services."
+        property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="robots" content="index, follow">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <style>
         @media (min-width:992px) {
@@ -26,6 +34,7 @@
             }
         }
     </style>
+    <link rel="sitemap" type="application/xml" href="https://www.sugarcoatsalon.in/sitemap.xml">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -46,7 +55,7 @@
                 <div class="navbar-wrapper">
                     <div class="navbar-side"><a href="index.html" class="navbar-brand w-nav-brand"><img
                                 src="/assets/sc-logo-03.png" loading="lazy" width="187"
-                                sizes="(max-width: 479px) 80vw, 187px" alt=""
+                                sizes="(max-width: 479px) 80vw, 187px" alt="Sugarcoat Salon brand logo"
                                 srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.png 3894w" /></a>
                         <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
                             <ul role="list" class="nav-menu w-list-unstyled">
@@ -57,37 +66,24 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="nav-button-wrapper"><a href="#contact" class="button-primary w-button">Appointment</a>
-                    </div>
+                    <div class="nav-button-wrapper"><a href="/contact-us.html" class="button-primary w-button">Book
+                            Appointment</a></div>
                     <div class="menu-button w-nav-button">
                         <div class="menu-icon w-icon-nav-menu"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- <div class="section hero-section">
-            <div class="w-layout-grid _2-grids _0-gap _100">
-                <div id="w-node-f52a1497-2735-f171-3c8d-6f49dfee458a-e9cc7957" class="hero-content-block">
-                    <div class="title-block">
-                        <div data-w-id="57969e3e-7732-03f7-71c5-a896fb8c9bed" style="opacity:0"
-                            class="subtitle margin-bottom-40px">salon - nails - makeup</div>
-                        <h1 data-w-id="cac36006-9d1e-41cf-bc16-58a5ee13f35c" style="opacity:0"
-                            class="heading h1 text-white margin-bottom-40px">your look <br /><span class="text-span">our
-                                craft</span></h1>
-                    </div>
-                </div>
-            </div>
-        </div> -->
         <section id="menu" class="section">
             <div class="container w-container">
                 <div class="section-wrapper">
                     <div class="title-block margin-bottom-60px">
-                        <!-- <div data-w-id="2438fe07-9125-ad85-55e4-cd5409cfcb8e" style="opacity:0"
-                            class="subtitle dark-title margin-bottom-40px">SERVICES</div> -->
-                        <h2 data-w-id="2438fe07-9125-ad85-55e4-cd5409cfcb90" style="opacity:0" class="heading h2">
-                            Terms and Conditions</h2></br>
-                        <p class="paragraph small-paragraph">By accessing or using this site, booking appointments, or
-                            purchasing any services or products, you agree to the following terms and conditions.</p>
+                        <h1 data-w-id="2438fe07-9125-ad85-55e4-cd5409cfcb90" style="opacity:0" class="heading h3">
+                            Terms and Conditions</h1></br>
+                        <p class="paragraph small-paragraph">By accessing or using this website, booking appointments,
+                            or
+                            purchasing any services or products from Sugarcoat salon, Hennur, bangalore, India, you
+                            agree to the following terms and conditions.</p>
                         </br>
                         <h2 class="menu-section-title">1. Appointments & Cancellations</h2>
 
@@ -146,46 +142,76 @@
                             booking or inquiries will be kept confidential and used only to serve you better.</p>
                         </br>
                         <h2 class="menu-section-title">8. Changes to Terms</h2>
-                        <p class="paragraph-2">Sugarcoat Salon reserves the right to update or change these terms at any
+                        <p class="paragraph-2">Sugarcoat Salon, Bangalore reserves the right to update or change these
+                            terms at any
                             time without prior notice. Your continued use of the website constitutes acceptance of those
                             changes.</p>
                         <p class="paragraph-2" style="font-style: italic;">Last Updated on 21 September 2025.</p>
                         </br>
                     </div>
                 </div>
-                <div class="div-block"><a href="#contact"
-                        class="button bg-black-gray button-below-menu w-button">Contact Us</a></div>
+                <div class="div-block"><a href="/contact-us.html" class="button cta-button w-button">Contact Us</a>
+                </div>
             </div>
         </section>
 
-        <section id="footer" class="section footer">
+        <section class="section footer">
             <div class="container w-container">
                 <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc025" style="opacity:0" class="footer-wrapper-two"><a
-                        href="#" class="footer-brand w-inline-block"><img src="/assets/sc-logo-03.png" loading="lazy"
-                            width="186" sizes="(max-width: 479px) 100vw, 186px" alt=""
-                            srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.png 3894w" /></a>
-                    <div class="footer-block-two"><a href="/" class="footer-link">About</a><a href="#menu"
-                            class="footer-link">Menu</a><a href="/" class="footer-link">Blog</a><a href="/"
-                            class="footer-link">Contact</a></div>
+                        href="#" class="footer-brand w-inline-block">
+                        <div class="footer-brand-block">
+                            <a href="/" class="footer-brand w-inline-block">
+                                <img src="/assets/sc-logo-03.png" loading="lazy" width="186"
+                                    alt="Sugarcoat Salon brand logo" />
+                            </a>
+                            <div class="footer-link">Find Us On</div>
+                            <div class="footer-trust">
+                                <a href="https://share.google/z5TwSsb1Zs1gvP81Q" target="_blank"
+                                    rel="nofollow noopener">
+                                    <img src="/assets/google-seeklogo.svg"
+                                        alt="Sugarcoat Salon Google Business Profile" />
+                                </a>
+                                <a href="https://jsdl.in/DT-158AVSRSLUD" target="_blank" rel="nofollow noopener">
+                                    <img src="/assets/justdial-seeklogo.com.svg" alt="Sugarcoat Salon on Justdial" />
+                                </a>
+                            </div>
+                        </div>
+                        <!-- <img src="/assets/sc-logo-03.png" loading="lazy" width="186"
+              sizes="(max-width: 479px) 100vw, 186px" alt=""
+              srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.png 3894w" /> -->
+                    </a>
+                    <div class="footer-block-two"><a href="#about" class="footer-link">About</a><a href="/services.html"
+                            class="footer-link">Menu</a><a href="#blog" class="footer-link">Blog</a><a
+                            href="/contact-us.html" class="footer-link">Contact</a></div>
+                    <div class="footer-block-two"><a class="footer-link">Popular Services</a>
+                        <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
+                            href="/services/keratin-treatment.html" class="footer-link-2">Keratin
+                            Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut &
+                            Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
+                            MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
+                            Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
+                            Skincare</a>
+                    </div>
                     <div class="footer-block-two">
                         <div class="footer-title">Social</div>
-                        <div class="footer-social-block"><a href="https://facebook.com/"
-                                class="footer-social-link w-inline-block">
+                        <div class="footer-social-block"><a href="https://www.facebook.com/sugarcoatsalonindia
+" class="footer-social-link w-inline-block">
                                 <div class="icon-block small rounded bg-burlywood"><img src="/assets/facebook.svg"
-                                        loading="lazy" alt="" /></div>
+                                        loading="lazy" alt="Sugarcoat Salon on Facebook" /></div>
                             </a><a href="https://wa.me/918296545458" class="footer-social-link w-inline-block">
                                 <div class="icon-block small rounded bg-burlywood"><img src="/assets/whatsapp.svg"
-                                        loading="lazy" alt="" /></div>
+                                        loading="lazy" alt="Chat with Sugarcoat Salon on WhatsApp" /></div>
                             </a><a href="https://instagram.com/sugarcoatsalonbangalore"
                                 class="footer-social-link w-inline-block">
                                 <div class="icon-block small rounded bg-burlywood"><img src="/assets/instagram.svg"
-                                        loading="lazy" alt="" /></div>
+                                        loading="lazy" alt="Sugarcoat Salon on Instagram" /></div>
                             </a></div>
                     </div>
                 </div>
                 <div class="footer-divider-two"></div>
                 <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc046" style="opacity:0" class="footer-bottom">
-                    <div class="footer-copyright">© 2025 Sugarcoat salon. All rights reserved</div>
+                    <div class="footer-copyright footer-copyright-small">© 2025 Sugarcoat salon. All rights reserved
+                    </div>
                     <div class="footer-legal-block"><a href="/terms-conditions.html" class="legal-link">Terms &amp;
                             Conditions</a><a href="/privacy-policy.html" class="legal-link">Privacy Policy</a></div>
                 </div>
