Mobile buttons added

--- a/index.html
+++ b/index.html
@@ -668,6 +668,16 @@
       </div>
     </section>
   </div>
+  <!-- Floating Mobile CTA -->
+  <div class="mobile-fab" id="mobileFab">
+    <a href="https://wa.me/918296545458" class="fab whatsapp" aria-label="WhatsApp">
+      <img src="/assets/mobile-fab-logo-whatsapp.svg" alt="">
+    </a>
+    <a href="tel:+918296545458" class="fab call" aria-label="Call">
+      <img src="/assets/mobile-fab-logo-call.svg" alt="">
+    </a>
+  </div>
+  <script src="/js/mobile-fab.js" defer></script>
   <script src="js/jquery.js?site=687bd395d7f42e25dc178e93" type="text/javascript"></script>
   <script src="js/webflow.schunk.36b8fb49256177c8.js" type="text/javascript"></script>
   <script src="js/webflow.schunk.3b58b0126ec020df.js" type="text/javascript"></script>
