--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,8 +42,8 @@
         type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Baskervville:regular,italic", "DM Sans:regular,italic,500,500italic,700,700italic", "Bodoni Moda:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic", "Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic", "Yellowtail:regular", "Fjalla One:regular", "Source Sans 3:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic", "Lexend:100,200,300,regular,500,600,700,800,900", "Zilla Slab:300,300italic,regular,italic,500,500italic,600,600italic,700,700italic", "Prata:regular", "Manrope:200,300,regular,500,600,700,800", "Playfair Display:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic", "Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"] } });</script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="assets/favicon.png" rel="shortcut icon" type="image/png" />
-    <link href="assets/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="/assets/favicon.webp" rel="shortcut icon" type="image/png" />
+    <link href="/assets/apple-touch-icon.webp" rel="apple-touch-icon" />
 
 </head>
 
@@ -54,14 +54,13 @@
             <div class="container">
                 <div class="navbar-wrapper">
                     <div class="navbar-side"><a href="index.html" class="navbar-brand w-nav-brand"><img
-                                src="/assets/sc-logo-03.png" loading="lazy" width="187"
-                                sizes="(max-width: 479px) 80vw, 187px" alt="Sugarcoat Salon brand logo"
-                                srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.png 3894w" /></a>
+                                src="/assets/sc-logo-03.svg" loading="lazy" width="187"
+                                sizes="(max-width: 479px) 80vw, 187px" alt="Sugarcoat Salon brand logo" /></a>
                         <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
                             <ul role="list" class="nav-menu w-list-unstyled">
-                                <li><a href="#about" class="nav-link">About</a></li>
+                                <li><a href="/#about" class="nav-link">About</a></li>
                                 <li><a href="/services.html" class="nav-link">Services & Pricing</a></li>
-                                <li><a href="index.html#blog" class="nav-link">Blog</a></li>
+                                <li><a href="/blog.html" class="nav-link">Blog</a></li>
                                 <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
                             </ul>
                         </nav>
@@ -169,7 +168,7 @@
                         href="#" class="footer-brand w-inline-block">
                         <div class="footer-brand-block">
                             <a href="/" class="footer-brand w-inline-block">
-                                <img src="/assets/sc-logo-03.png" loading="lazy" width="186"
+                                <img src="/assets/sc-logo-03.svg" loading="lazy" width="186"
                                     alt="Sugarcoat Salon brand logo" />
                             </a>
                             <div class="footer-link">Find Us On</div>
@@ -184,9 +183,9 @@
                                 </a>
                             </div>
                         </div>
-                        <!-- <img src="/assets/sc-logo-03.png" loading="lazy" width="186"
+                        <!-- <img src="/assets/sc-logo-03.svg" loading="lazy" width="186"
               sizes="(max-width: 479px) 100vw, 186px" alt=""
-              srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.png 3894w" /> -->
+              srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.svg 3894w" /> -->
                     </a>
                     <div class="footer-block-two"><a href="#about" class="footer-link">About</a><a href="/services.html"
                             class="footer-link">Menu</a><a href="#blog" class="footer-link">Blog</a><a
