nav bar links corrected

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 alt="Sugarcoat Salon brand logo" /></a>
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
-                <li><a href="#about" class="nav-link">About Us</a></li>
+                <li><a href="/#about" class="nav-link">About Us</a></li>
                 <li><a href="/services.html" class="nav-link">Services & Pricing</a></li>
-                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="#blog.html" class="nav-link">Blog</a></li>
                 <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
               </ul>
             </nav>
@@ -119,7 +119,7 @@
               </div>
               <div class="title-block padding-left-right-60">
                 <h2 data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a77" style="opacity:0"
-                  class="subtitle dark-title margin-bottom-40px">About</h2>
+                  class="subtitle dark-title margin-bottom-40px">About Us</h2>
                 <div data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a7a" style="opacity:0"
                   class="heading h3 margin-bottom-40px">Premium Hair & Beauty<br />Salon in Hennur, Bangalore</div>
                 <p data-w-id="18294f07-da53-8414-af7d-d5e0d019489c" style="opacity:0"
@@ -632,9 +632,9 @@
               </div>
             </div>
           </a>
-          <div class="footer-block-two"><a href="#about" class="footer-link">About</a><a href="/services.html"
-              class="footer-link">Menu</a><a href="#blog" class="footer-link">Blog</a><a href="/contact-us.html"
-              class="footer-link">Contact</a></div>
+          <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a href="/services.html"
+              class="footer-link">Services & Pricing</a><a href="/blog" class="footer-link">Blog</a><a
+              href="/contact-us.html" class="footer-link">Contact Us</a></div>
           <div class="footer-block-two"><a class="footer-link">Popular Services</a>
             <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
               href="/services/keratin-treatment.html" class="footer-link-2">Keratin
