--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -187,9 +187,10 @@
               sizes="(max-width: 479px) 100vw, 186px" alt=""
               srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.svg 3894w" /> -->
                     </a>
-                    <div class="footer-block-two"><a href="#about" class="footer-link">About</a><a href="/services.html"
-                            class="footer-link">Menu</a><a href="#blog" class="footer-link">Blog</a><a
-                            href="/contact-us.html" class="footer-link">Contact</a></div>
+                    <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a
+                            href="/services.html" class="footer-link">Services & Pricing</a><a href="/blog"
+                            class="footer-link">Blog</a><a href="/contact-us.html" class="footer-link">Contact Us</a>
+                    </div>
                     <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                         <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
                             href="/services/keratin-treatment.html" class="footer-link-2">Keratin
