--- a/contact-us.html
+++ b/contact-us.html
@@ -50,6 +50,9 @@
   "@id": "https://sugarcoatsalon.in/#beautysalon",
   "name": "Sugarcoat Salon",
   "url": "https://sugarcoatsalon.in/",
+  "image": "https://sugarcoatsalon.in/assets/salon-interior-1.webp",
+"logo": "https://sugarcoatsalon.in/assets/sc-logo-03.webp",
+
   "telephone": "+91-8296545458",
   "priceRange": "₹₹",
   "address": {
