--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/terms-and-conditions.html">
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/terms-and-conditions">
     <title>Terms and Conditions | Sugarcoat Salon Bangalore</title>
     <meta
         content="Read the terms and conditions of Sugarcoat Salon in Bangalore regarding appointments, payments, cancellations, and salon services."
