--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/privacy-policy.html">
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/privacy-policy">
     <title>Privacy Policy | Sugarcoat Salon Bangalore
     </title>
     <meta content="Learn how Sugarcoat Salon in Bangalore collects, uses, and protects your personal information."
