--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="google-site-verification" content="LM9kGB_uIxpK8N3KkYqhk5jk9Giu9pFpjnC2SSC6HbA" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta name="format-dection" content="telephone=no, email=no, address=no">
   <meta name="robots" content="index, follow">
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <style>
@@ -46,6 +47,71 @@
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="/assets/favicon.webp" rel="shortcut icon" type="image/png" />
   <link href="/assets/apple-touch-icon.webp" rel="apple-touch-icon" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BeautySalon",
+  "@id": "https://sugarcoatsalon.in/#beautysalon",
+  "name": "Sugarcoat Salon",
+  "url": "https://sugarcoatsalon.in/",
+  "image": "https://sugarcoatsalon.in/assets/salon-interior-1.webp",
+"logo": "https://sugarcoatsalon.in/assets/sc-logo-03.webp",
+
+  "telephone": "+91-8296545458",
+  "priceRange": "₹₹",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "1st Floor, Capital Market, Hennur Main Road, near Kanakashree Housing Society, Kannuru",
+    "addressLocality": "Bengaluru",
+    "addressRegion": "KA",
+    "postalCode": "560077",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 13.0536,
+    "longitude": 77.6517
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+    ],
+    "opens": "10:00",
+    "closes": "20:00"
+  },
+  "sameAs": [
+    "https://www.instagram.com/sugarcoatsalonbangalore",
+    "https://www.facebook.com/sugarcoatsalonindia"
+  ],
+  "areaServed": {
+    "@type": "Place",
+    "name": "Hennur, Kothanur, Bangalore"
+  },
+  "serviceOffered": [
+    {
+      "@type": "Service",
+      "name": "Haircut and Hair Styling"
+    },
+    {
+      "@type": "Service",
+      "name": "Hair Botox and Keratin Treatment"
+    },
+    {
+      "@type": "Service",
+      "name": "Hair Colouring"
+    },
+    {
+      "@type": "Service",
+      "name": "Bridal and Party Makeup"
+    },
+    {
+      "@type": "Service",
+      "name": "Nail Art and Nail Extensions"
+    }
+  ]
+}
+</script>
 </head>
 
 <body>
@@ -60,13 +126,13 @@
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
                 <li><a href="/#about" class="nav-link">About Us</a></li>
-                <li><a href="/services.html" class="nav-link">Services & Pricing</a></li>
-                <li><a href="#blog.html" class="nav-link">Blog</a></li>
-                <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+                <li><a href="/services" class="nav-link">Services & Pricing</a></li>
+                <li><a href="/blog" class="nav-link">Blog</a></li>
+                <li><a href="/contact-us" class="nav-link">Contact Us</a></li>
               </ul>
             </nav>
           </div>
-          <div class="nav-button-wrapper"><a href="/contact-us.html" class="button-primary w-button">Book
+          <div class="nav-button-wrapper"><a href="/contact-us" class="button-primary w-button">Book
               Appointment</a></div>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
@@ -86,7 +152,7 @@
             </div>
             <div data-w-id="cac36006-9d1e-41cf-bc16-58a5ee13f35c" style="opacity:0"
               class="heading h1 text-white margin-bottom-40px">your look <br /><span class="text-span">our craft</span>
-            </div><a href="/services.html" data-w-id="07b5bf2b-c522-8700-8295-6f6d73a4daff" style="opacity:0"
+            </div><a href="/services" data-w-id="07b5bf2b-c522-8700-8295-6f6d73a4daff" style="opacity:0"
               class="button button-pink w-button">View Services</a>
           </div>
         </div>
@@ -150,7 +216,7 @@
                 <div data-w-id="d266e15d-3757-b46a-c35f-9bc5ef0e7cf1" style="opacity:0" class="title-block text-white">
                   <h2 class="subtitle margin-bottom-40px">Contact Us</h2>
                   <h2 class="heading h3 text-white margin-bottom-40px">Looking for expert hair, skin or makeup services?
-                  </h2><a href="/contact-us.html" class="button text-white w-button">Book Appointment</a>
+                  </h2><a href="/contact-us" class="button text-white w-button">Book Appointment</a>
                 </div>
               </div>
               <div id="w-node-d266e15d-3757-b46a-c35f-9bc5ef0e7cf8-dc178eda" class="reserve-image-block no-hight">
@@ -197,7 +263,7 @@
           </div>
           <div class="experience-block">
             <div class="w-layout-grid _3-grids">
-              <a href="/services.html" class="card-link" id="w-node-_89afada3-0bac-e08c-380c-0fc7512c034e-dc178eda"
+              <a href="/services" class="card-link" id="w-node-_89afada3-0bac-e08c-380c-0fc7512c034e-dc178eda"
                 data-w-id="89afada3-0bac-e08c-380c-0fc7512c034e" style="opacity:0" class="card">
                 <div class="card-image-block margin-bottom-30px">
                   <div class="image-container"><img src="/assets/services-02.webp" loading="lazy"
@@ -214,7 +280,7 @@
                     understand your vibe and deliver styles that suit your personality, face, and lifestyle.</p>
                 </div>
               </a>
-              <a href="/services.html" class="card-link" id="w-node-fbad0cd9-14ba-ba9a-b80c-e79146d0fb9c-dc178eda"
+              <a href="/services" class="card-link" id="w-node-fbad0cd9-14ba-ba9a-b80c-e79146d0fb9c-dc178eda"
                 data-w-id="fbad0cd9-14ba-ba9a-b80c-e79146d0fb9c" style="opacity:0" class="card">
                 <div class="card-image-block margin-bottom-30px">
                   <div class="image-container"><img src="/assets/services-01.webp" loading="lazy"
@@ -232,7 +298,7 @@
 
                 </div>
               </a>
-              <a href="/services.html" class="card-link" id="w-node-eeab10a3-a60b-0fb3-bbf1-d8d1f0002132-dc178eda"
+              <a href="/services" class="card-link" id="w-node-eeab10a3-a60b-0fb3-bbf1-d8d1f0002132-dc178eda"
                 data-w-id="eeab10a3-a60b-0fb3-bbf1-d8d1f0002132" style="opacity:0" class="card">
                 <div class="card-image-block margin-bottom-30px">
                   <div class="image-container"><img src="/assets/services-03.webp" loading="lazy"
@@ -632,9 +698,9 @@
               </div>
             </div>
           </a>
-          <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a href="/services.html"
+          <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a href="/services"
               class="footer-link">Services & Pricing</a><a href="/blog" class="footer-link">Blog</a><a
-              href="/contact-us.html" class="footer-link">Contact Us</a></div>
+              href="/contact-us" class="footer-link">Contact Us</a></div>
           <div class="footer-block-two"><a class="footer-link">Popular Services</a>
             <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
               href="/services/keratin-treatment.html" class="footer-link-2">Keratin
@@ -661,8 +727,8 @@
         <div class="footer-divider-two"></div>
         <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc046" style="opacity:0" class="footer-bottom">
           <div class="footer-copyright footer-copyright-small">© 2025 Sugarcoat salon. All rights reserved</div>
-          <div class="footer-legal-block"><a href="/terms-conditions.html" class="legal-link">Terms &amp;
-              Conditions</a><a href="/privacy-policy.html" class="legal-link">Privacy Policy</a></div>
+          <div class="footer-legal-block"><a href="/terms-and-conditions" class="legal-link">Terms &amp;
+              Conditions</a><a href="/privacy-policy" class="legal-link">Privacy Policy</a></div>
         </div>
       </div>
     </section>
