--- a/services.html
+++ b/services.html
@@ -59,13 +59,13 @@
                         <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
                             <ul role="list" class="nav-menu w-list-unstyled">
                                 <li><a href="/#about" class="nav-link">About Us</a></li>
-                                <li><a href="/services.html" class="nav-link">Services & Pricing</a></li>
-                                <li><a href="#blog.html" class="nav-link">Blog</a></li>
-                                <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+                                <li><a href="/services" class="nav-link">Services & Pricing</a></li>
+                                <li><a href="/blog" class="nav-link">Blog</a></li>
+                                <li><a href="/contact-us" class="nav-link">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
-                    <div class="nav-button-wrapper"><a href="/contact-us.html" class="button-primary w-button">Book
+                    <div class="nav-button-wrapper"><a href="/contact-us" class="button-primary w-button">Book
                             Appointment</a></div>
                     <div class="menu-button w-nav-button">
                         <div class="menu-icon w-icon-nav-menu"></div>
@@ -1229,7 +1229,7 @@
                     </div>
                 </div>
                 <!-- Button -->
-                <div class="div-block"><a href="/contact-us.html"
+                <div class="div-block"><a href="/contact-us"
                         class="button cta-button w-button button-top-margin">Book
                         Appointment</a></div>
             </div>
@@ -1507,8 +1507,8 @@
               srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.svg 3894w" /> -->
                     </a>
                     <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a
-                            href="/services.html" class="footer-link">Services & Pricing</a><a href="/blog"
-                            class="footer-link">Blog</a><a href="/contact-us.html" class="footer-link">Contact Us</a>
+                            href="/services" class="footer-link">Services & Pricing</a><a href="/blog"
+                            class="footer-link">Blog</a><a href="/contact-us" class="footer-link">Contact Us</a>
                     </div>
                     <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                         <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
@@ -1539,8 +1539,8 @@
                 <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc046" style="opacity:0" class="footer-bottom">
                     <div class="footer-copyright footer-copyright-small">© 2025 Sugarcoat salon. All rights reserved
                     </div>
-                    <div class="footer-legal-block"><a href="/terms-conditions.html" class="legal-link">Terms &amp;
-                            Conditions</a><a href="/privacy-policy.html" class="legal-link">Privacy Policy</a></div>
+                    <div class="footer-legal-block"><a href="/terms-and-conditions" class="legal-link">Terms &amp;
+                            Conditions</a><a href="/privacy-policy" class="legal-link">Privacy Policy</a></div>
                 </div>
             </div>
         </section>
