--- a/services.html
+++ b/services.html
@@ -44,7 +44,71 @@
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="/assets/favicon.webp" rel="shortcut icon" type="image/png" />
     <link href="/assets/apple-touch-icon.webp" rel="apple-touch-icon" />
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BeautySalon",
+  "@id": "https://sugarcoatsalon.in/#beautysalon",
+  "name": "Sugarcoat Salon",
+  "url": "https://sugarcoatsalon.in/",
+  "image": "https://sugarcoatsalon.in/assets/salon-interior-1.webp",
+"logo": "https://sugarcoatsalon.in/assets/sc-logo-03.webp",
 
+  "telephone": "+91-8296545458",
+  "priceRange": "₹₹",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "1st Floor, Capital Market, Hennur Main Road, near Kanakashree Housing Society, Kannuru",
+    "addressLocality": "Bengaluru",
+    "addressRegion": "KA",
+    "postalCode": "560077",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 13.0536,
+    "longitude": 77.6517
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+    ],
+    "opens": "10:00",
+    "closes": "20:00"
+  },
+  "sameAs": [
+    "https://www.instagram.com/sugarcoatsalonbangalore",
+    "https://www.facebook.com/sugarcoatsalonindia"
+  ],
+  "areaServed": {
+    "@type": "Place",
+    "name": "Hennur, Kothanur, Bangalore"
+  },
+  "serviceOffered": [
+    {
+      "@type": "Service",
+      "name": "Haircut and Hair Styling"
+    },
+    {
+      "@type": "Service",
+      "name": "Hair Botox and Keratin Treatment"
+    },
+    {
+      "@type": "Service",
+      "name": "Hair Colouring"
+    },
+    {
+      "@type": "Service",
+      "name": "Bridal and Party Makeup"
+    },
+    {
+      "@type": "Service",
+      "name": "Nail Art and Nail Extensions"
+    }
+  ]
+}
+</script>
 </head>
 
 <body>
@@ -1229,8 +1293,7 @@
                     </div>
                 </div>
                 <!-- Button -->
-                <div class="div-block"><a href="/contact-us"
-                        class="button cta-button w-button button-top-margin">Book
+                <div class="div-block"><a href="/contact-us" class="button cta-button w-button button-top-margin">Book
                         Appointment</a></div>
             </div>
         </section>
@@ -1506,9 +1569,9 @@
               sizes="(max-width: 479px) 100vw, 186px" alt=""
               srcset="/assets/sc-logo-03-500.webp 500w, /assets/sc-logo-03-800.webp 800w, /assets/sc-logo-03-1080.webp 1080w, /assets/sc-logo-03-1600.webp 1600w, /assets/sc-logo-03-2000.webp 2000w, /assets/sc-logo-03-2600.webp 2600w, /assets/sc-logo-03-3200.webp 3200w, /assets/sc-logo-03.svg 3894w" /> -->
                     </a>
-                    <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a
-                            href="/services" class="footer-link">Services & Pricing</a><a href="/blog"
-                            class="footer-link">Blog</a><a href="/contact-us" class="footer-link">Contact Us</a>
+                    <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a href="/services"
+                            class="footer-link">Services & Pricing</a><a href="/blog" class="footer-link">Blog</a><a
+                            href="/contact-us" class="footer-link">Contact Us</a>
                     </div>
                     <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                         <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
