--- a/index.html
+++ b/index.html
@@ -88,28 +88,32 @@
     "@type": "Place",
     "name": "Hennur, Kothanur, Bangalore"
   },
-  "serviceOffered": [
-    {
-      "@type": "Service",
-      "name": "Haircut and Hair Styling"
-    },
-    {
-      "@type": "Service",
-      "name": "Hair Botox and Keratin Treatment"
-    },
-    {
-      "@type": "Service",
-      "name": "Hair Colouring"
-    },
-    {
-      "@type": "Service",
-      "name": "Bridal and Party Makeup"
-    },
-    {
-      "@type": "Service",
-      "name": "Nail Art and Nail Extensions"
-    }
-  ]
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Salon Services",
+    "itemListElement": [
+      {
+        "@type": "Service",
+        "name": "Haircut and Hair Styling"
+      },
+      {
+        "@type": "Service",
+        "name": "Hair Botox and Keratin Treatment"
+      },
+      {
+        "@type": "Service",
+        "name": "Hair Colouring"
+      },
+      {
+        "@type": "Service",
+        "name": "Bridal and Party Makeup"
+      },
+      {
+        "@type": "Service",
+        "name": "Nail Art and Nail Extensions"
+      }
+    ]
+  }
 }
 </script>
 </head>
@@ -128,11 +132,11 @@
                 <li><a href="/#about" class="nav-link">About Us</a></li>
                 <li><a href="/services" class="nav-link">Services & Pricing</a></li>
                 <li><a href="/blog" class="nav-link">Blog</a></li>
-                <li><a href="/contact-us" class="nav-link">Contact Us</a></li>
+                <li><a href="/contact" class="nav-link">Contact Us</a></li>
               </ul>
             </nav>
           </div>
-          <div class="nav-button-wrapper"><a href="/contact-us" class="button-primary w-button">Book
+          <div class="nav-button-wrapper"><a href="/contact" class="button-primary w-button">Book
               Appointment</a></div>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
@@ -176,7 +180,7 @@
           <div class="about-section">
             <div class="w-layout-grid _2-grids center-grid">
               <div id="w-node-_953fa10b-5bac-8865-4e96-81ee900b4b3e-dc178eda" class="grid-images-div">
-                <div class="image-container"><img class="image" src="/assets/hero.png"
+                <div class="image-container"><img class="image" src="/assets/hero.webp"
                     alt="Premium hair, beauty and nail services at Sugarcoat Salon" style="opacity:0"
                     sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                     data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy"
@@ -216,7 +220,7 @@
                 <div data-w-id="d266e15d-3757-b46a-c35f-9bc5ef0e7cf1" style="opacity:0" class="title-block text-white">
                   <h2 class="subtitle margin-bottom-40px">Contact Us</h2>
                   <h2 class="heading h3 text-white margin-bottom-40px">Looking for expert hair, skin or makeup services?
-                  </h2><a href="/contact-us" class="button text-white w-button">Book Appointment</a>
+                  </h2><a href="/contact" class="button text-white w-button">Book Appointment</a>
                 </div>
               </div>
               <div id="w-node-d266e15d-3757-b46a-c35f-9bc5ef0e7cf8-dc178eda" class="reserve-image-block no-hight">
@@ -699,8 +703,8 @@
             </div>
           </a>
           <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a href="/services"
-              class="footer-link">Services & Pricing</a><a href="/blog" class="footer-link">Blog</a><a
-              href="/contact-us" class="footer-link">Contact Us</a></div>
+              class="footer-link">Services & Pricing</a><a href="/blog" class="footer-link">Blog</a><a href="/contact"
+              class="footer-link">Contact Us</a></div>
           <div class="footer-block-two"><a class="footer-link">Popular Services</a>
             <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
               href="/services/keratin-treatment.html" class="footer-link-2">Keratin
