--- a/services.html
+++ b/services.html
@@ -85,28 +85,32 @@
     "@type": "Place",
     "name": "Hennur, Kothanur, Bangalore"
   },
-  "serviceOffered": [
-    {
-      "@type": "Service",
-      "name": "Haircut and Hair Styling"
-    },
-    {
-      "@type": "Service",
-      "name": "Hair Botox and Keratin Treatment"
-    },
-    {
-      "@type": "Service",
-      "name": "Hair Colouring"
-    },
-    {
-      "@type": "Service",
-      "name": "Bridal and Party Makeup"
-    },
-    {
-      "@type": "Service",
-      "name": "Nail Art and Nail Extensions"
-    }
-  ]
+    "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Salon Services",
+    "itemListElement": [
+      {
+        "@type": "Service",
+        "name": "Haircut and Hair Styling"
+      },
+      {
+        "@type": "Service",
+        "name": "Hair Botox and Keratin Treatment"
+      },
+      {
+        "@type": "Service",
+        "name": "Hair Colouring"
+      },
+      {
+        "@type": "Service",
+        "name": "Bridal and Party Makeup"
+      },
+      {
+        "@type": "Service",
+        "name": "Nail Art and Nail Extensions"
+      }
+    ]
+  }
 }
 </script>
 </head>
@@ -125,11 +129,11 @@
                                 <li><a href="/#about" class="nav-link">About Us</a></li>
                                 <li><a href="/services" class="nav-link">Services & Pricing</a></li>
                                 <li><a href="/blog" class="nav-link">Blog</a></li>
-                                <li><a href="/contact-us" class="nav-link">Contact Us</a></li>
+                                <li><a href="/contact" class="nav-link">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
-                    <div class="nav-button-wrapper"><a href="/contact-us" class="button-primary w-button">Book
+                    <div class="nav-button-wrapper"><a href="/contact" class="button-primary w-button">Book
                             Appointment</a></div>
                     <div class="menu-button w-nav-button">
                         <div class="menu-icon w-icon-nav-menu"></div>
@@ -1293,7 +1297,7 @@
                     </div>
                 </div>
                 <!-- Button -->
-                <div class="div-block"><a href="/contact-us" class="button cta-button w-button button-top-margin">Book
+                <div class="div-block"><a href="/contact" class="button cta-button w-button button-top-margin">Book
                         Appointment</a></div>
             </div>
         </section>
@@ -1571,7 +1575,7 @@
                     </a>
                     <div class="footer-block-two"><a href="/#about" class="footer-link">About Us</a><a href="/services"
                             class="footer-link">Services & Pricing</a><a href="/blog" class="footer-link">Blog</a><a
-                            href="/contact-us" class="footer-link">Contact Us</a>
+                            href="/contact" class="footer-link">Contact Us</a>
                     </div>
                     <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                         <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
