--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,12 @@
 " property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
+    <!-- Social Share Image -->
+    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
+    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
     <meta name="robots" content="index, follow">
