--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
+    <meta property="og:image:alt" content="Hair and beauty blog by Sugarcoat Salon Bangalore" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-blog.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
