adding individual blog pages

--- a/blog.html
+++ b/blog.html
@@ -153,7 +153,7 @@
                                             alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
-                                    <div class="tags margin-bottom-30px">Receipts</div>
+                                    <div class="tags margin-bottom-30px">Haircare</div>
                                     <div class="card-title margin-bottom-30px">Monsoon Hair Care in Bangalore:
                                         Frizz-Free and Fabulous
                                     </div>
@@ -166,7 +166,7 @@
                                             alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
-                                    <div class="tags margin-bottom-30px">Food</div>
+                                    <div class="tags margin-bottom-30px">Hairstyles</div>
                                     <div class="card-title margin-bottom-30px">Top Hair Trends in Bangalore: What’s Hot
                                         in 2025?</div>
                                     <p class="paragraph small-paragraph">15 jun 2020</p>
@@ -178,7 +178,7 @@
                                             alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
-                                    <div class="tags margin-bottom-30px">Restaurant</div>
+                                    <div class="tags margin-bottom-30px">MakeUp</div>
                                     <div class="card-title margin-bottom-30px">Pre-Bridal to D-Day: Your Ultimate Salon
                                         Checklist</div>
                                     <p class="paragraph small-paragraph">12 jun 2020</p>
@@ -190,7 +190,7 @@
                                             alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
-                                    <div class="tags margin-bottom-30px">Delivery</div>
+                                    <div class="tags margin-bottom-30px">Haircare</div>
                                     <div class="card-title margin-bottom-30px">Keratin vs Botox Hair Treatment – What’s
                                         Right for You?
                                     </div>
